Nouvelle sauvegarde HTML

--- a/Exercice HTML/HTML-06/index.html
+++ b/Exercice HTML/HTML-06/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Les médias</title>
 </head>
 <body>
-    <img src="Media/logo_windows.jpg" alt="Logo windows" title="logo_windows" usemap="planetemap">
 
-    <map name="planetemap"></map>
+    <video src="Media/developpeur.mp4" width="1080px" controls="controls"></video>
+    <audio src="Media/developpeur.mp4"></audio></br>
 
-    <area shape="rect" coords="0,0,70,70" href="" alt="https://www.w3schools.com/tags/tag_map.asp">
+    <object data="Media/developpeur.mp4"  aria-controls=""></object>
 </body>
 </html>
