--- a/Exercice HTML/HTML-08/index.html
+++ b/Exercice HTML/HTML-08/index.html
@@ -71,31 +71,31 @@
 
             <label for="nom">Votre nom</label>
 
-            <input id="nom" type="text" placeholder="Entrez votre nom" required> </br>
+            <input id="nom" type="text" placeholder="Entrez votre nom" required style="margin-left: 99px;"> </br>
 
             <label for="prenom">Votre prénom</label>
 
-            <input id="prenom" type="text" placeholder="Entrez votre prénom"> </br>
+            <input id="prenom" type="text" placeholder="Entrez votre prénom" required style="margin-left: 79px;"> </br>
 
             <label for="datedenaissance"> Votre date de naissance </label>
 
-            <input id="datedenaissance" type="text" placeholder="JJ/MM/AAAA"> </br>
+            <input id="datedenaissance" type="text" placeholder="JJ/MM/AAAA" style="margin-left: 17px;" required> </br>
 
             <label for="adresse">Votre adresse</label>
 
-            <input id="adresse" type="text" placeholder="Entrez votre adresse"> </br>
+            <input id="adresse" type="text" placeholder="Entrez votre adresse" style="margin-left: 81px;" required> </br>
 
             <label for="ville">Votre ville</label>
 
-            <input id="ville" type="text" placeholder="Entrez votre ville"> </br>
+            <input id="ville" type="text" placeholder="Entrez votre ville" style="margin-left: 99px;" required> </br>
 
             <label for="codepostal">Votre code postal</label>
 
-            <input id="codepostal" type="text" placeholder="Entrez votre code postal"> </br>
+            <input id="codepostal" type="text" placeholder="Entrez votre code postal" style="margin-left: 55px;" required> </br>
 
             <label for="mail">Votre e-mail</label>
 
-            <input id="mail" type="email" pattern=".+@lobex/.com" placeholder="Entrez voter e-mail">
+            <input id="mail" type="email" pattern=".+@lobex/.com" placeholder="Entrez voter e-mail" style="margin-left: 87px;" required>
 
         </fieldset> </br>
 
@@ -127,6 +127,14 @@
             <option value="choix4">2500 euros</option>
             <option value="choix5">Autre</option>
         </select> </br></br>
+
+        <textarea name="commentaire" id="" cols="30" rows="5" placeholder="Vos commentaires"></textarea>
+
+        <h3>Merci d'avoir répondu au questionnaire</h3>
+
+        <input type="submit" value="Envoyer"> 
+
+        <input type="button" value="Annulez">
 
 
 
