--- a/Exercice HTML/HTML-08/index.html
+++ b/Exercice HTML/HTML-08/index.html
@@ -60,10 +60,11 @@
         <input type="submit" value="Envoyer">
         <input type="button" value="Annulez">
     </form>
-
+    <center>
     <h1>Exercices : Grande enquêtes sur les stagiaires</h1>
 
     <h3>merci de nous répondre</h3>
+    </center>
     <form action=" http://bienvu.net/script.php" method="post" enctype="multipart/form-data">
 
         <fieldset>
@@ -121,10 +122,10 @@
 
         <label for="salaire"> Quel était votre salaire après la formation ?</label>
         <select id="salaire" name="" id="">
-            <option value="choix1">1000 euros</option>
-            <option value="choix2">1500 euros</option>
-            <option value="choix3">2000 euros</option>
-            <option value="choix4">2500 euros</option>
+            <option value="choix1"><1000 euros</option>
+            <option value="choix2"><1500 euros</option>
+            <option value="choix3"><2000 euros</option>
+            <option value="choix4"><2500 euros</option>
             <option value="choix5">Autre</option>
         </select> </br></br>
 
