--- a/Exercice HTML/HTML1-2/index.html
+++ b/Exercice HTML/HTML1-2/index.html
@@ -38,23 +38,23 @@
     <ol type="1">
       <li>Ceci est le premier élément numéroté</li>
       <li>Ceci est le deuxième élément numéroté</li>
-      <ul>
-        <li>Ceci est le premier sous blabla</li>
-        <ol type="1">
-          <li>blablabalbhdghglkdjghgsjdjsiughsgkjshgkjd</li>
-          <li>ihgsfiushgshgkjshghsghsgiuhgiuzhiguh</li>
-          <li>oui je suis toujours</li>
-        </ol>
-        <li></li>
-        <li></li>
-      </ul>
-      <li>
-        Ceci est le troisème élément numérotée qui contient deux définitions
-      </li>
-      <p>facile</p>
-      <sub style="margin-left: 30px">qui n'est pas difficile</sub>
-      <p>difficile</p>
-      <sub style="margin-left: 30px">synonyme de compliqué</sub>
+        <ul>
+          <li>Ceci est le premier sous blabla</li>
+            <ol type="1">
+              <li>blablabalbhdghglkdjghgsjdjsiughsgkjshgkjd</li>
+              <li>ihgsfiushgshgkjshghsghsgiuhgiuzhiguh</li>
+              <li>oui je suis toujours</li>
+            </ol>
+          <li> FLEMME</li>
+          <li> FLEMME</li>
+        </ul>
+      
+      <li>Ceci est le troisème élément numérotée qui contient deux définitions</li>
+      
+        <p>facile</p>
+          <sub style="margin-left: 30px">qui n'est pas difficile</sub>
+        <p>difficile</p>
+          <sub style="margin-left: 30px">synonyme de compliqué</sub>
     </ol>
 
     <h1>Exercice 2</h1>
