--- a/Exercice CSS/CCS3-1/index.html
+++ b/Exercice CSS/CCS3-1/index.html
@@ -5,6 +5,13 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
+    <ul id="menu">
+      <li><a href="html.html">XML</a></li>
+      <li><a href="css.html">CSS3</a></li>
+      <li><a href="xml.html">HTML5</a></li>
+      <li><a href="javascript.html">JavaScript</a></li>
+      <li><a href="jquery.html">JQuery</a></li>
+    </ul>
     <div id="contenu1">
       <h2>Mettre en forme des éléments HTML</h2>
       </br> </br>
