--- a/Exercice CSS/CSS feuille 2/index.html
+++ b/Exercice CSS/CSS feuille 2/index.html
@@ -1,68 +1,97 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/styles.css" />
     <title>CSS feuille 2</title>
-</head>
-<body>
+  </head>
+  <body>
     <menu id="menu">
-        <li><a href="connexion">se connecter</a></li>
+      <li><a href="connexion">se connecter</a></li>
     </menu>
     <header id="header">
-        <h1>Site de Librairie</h1>
+      <h1>Site de Librairie</h1>
 
-        <p>Libraires en lignes depuis 1820</p>
+      <p>Libraires en lignes depuis 1820</p>
     </header>
 
     <menu id="menu2">
-        <li><a href="statique.html">Statistiques</a></li>
-        <li><a href="roman.html">Romans</a></li>
-        <li><a href="science.html">Science</a></li>
-        <li><a href="art.html">Arts</a></li>
-        <li><a href="politique.html">Politique</a></li>
-        <li><a href="bd.html">Bandes-déssinées</a></li>
+      <li><a class="li_menu2" href="statique.html">Statistiques</a></li>
+      <li><a class="li_menu2_roman" href="roman.html">Romans</a></li>
+      <li><a class="li_menu2" href="science.html">Science</a></li>
+      <li><a class="li_menu2" href="art.html">Arts</a></li>
+      <li><a class="li_menu2" href="politique.html">Politique</a></li>
+      <li><a class="li_menu2" href="bd.html">Bandes-déssinées</a></li>
     </menu>
 
     <section id="blocaffichagelivre">
+      <section class="livre">
+        <h2>Quatrevingt-treize</h2>
+        <img src="media/livre.png" alt="photos_livre_png" />
+        <h3>Victor Hugo</h3>
+        <p>Roman de Victor Hugo sur la révolution française.</p>
+        <p>Nombre de commentaires: 240</p>
+      </section>
 
-        <section class="livre">
-            <h2>Quatrevingt-treize</h2>
-            <img src="media/livre.png" alt="photos_livre_png">
-            <h3>Victor Hugo</h3>
-            <p>Roman de Victor Hugo</p>
-            <p>Nombre de commentaires: 240</p>
-        </section>
+      <section class="livre">
+        <h2>Germinal</h2>
+        <img src="media/livre.png" alt="photos_livre_png" />
+        <h3>Emile Zola</h3>
+        <p>Treizième roman de la série des Rougon-Macquart.</p>
+        <p>Nombre de commentaires: 10</p>
+      </section>
 
-        <section class="livre">
-            <h2>Germinal</h2>
-            <img src="media/livre.png" alt="photos_livre_png">
-            <h3>Emile Zola</h3>
-            <p>Treizième roman de la série des Rougon-Macquart.</p>
-            <p>Nombre de commentaires: 10</p>
-        </section>
+      <section class="livre">
+        <h2>Germinal</h2>
+        <img src="media/livre.png" alt="photos_livre_png" />
+        <h3>Emile Zola</h3>
+        <p>Treizième roman de la série des Rougon-Macquart.</p>
+        <p>Nombre de commentaires: 10</p>
+      </section>
 
-    </section>
+      <section class="livre">
+        <h2>Germinal</h2>
+        <img src="media/livre.png" alt="photos_livre_png" />
+        <h3>Emile Zola</h3>
+        <p>Treizième roman de la série des Rougon-Macquart.</p>
+        <p>Nombre de commentaires: 10</p>
+      </section>
 
-    <section id="nouvelles">
-
+      <section id="nouvelles">
         <section id="vl"></section>
 
         <section>
-            <h3>Nouvelles</h3>
-            <br>
-            <p> Blabla BlablaBlablaBlabla</p>
-            <br>
-            <p> Blabla BlablaBlablaBlabla</p>
-            <br>
-            <p> Blabla BlablaBlablaBlabla</p>
-            <br>
-            <p> Blabla BlablaBlablaBlabla</p>
-            <br>
+          <h3>Nouvelles</h3>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
+          <p>Blabla BlablaBlablaBlabla</p>
+          <br />
         </section>
-
+      </section>
     </section>
-    
-</body>
+  </body>
 </html>
