--- a/Exercice CSS/RessourcesAtelier/SiteDWWM/index.html
+++ b/Exercice CSS/RessourcesAtelier/SiteDWWM/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles/normalize.css">
-    <link rel="stylesheet" href="../styles/main.css">
-    <link rel="shortcut icon" href="../SiteDWWM/Images/favicon.ico">
+    <link rel="stylesheet" href="../styles/normalize.css" />
+    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="shortcut icon" href="../SiteDWWM/Images/favicon.ico" />
     <title>Formation Développeur Web Web mobile AFPA</title>
   </head>
   <body>
     <header>
-      <img src="Images/logo.jpeg" alt="Logo de la société AFPA"/>
+      <img src="Images/logo.jpeg" alt="Logo de la société AFPA" />
       <nav>
         <ul>
           <li><a href="index.html">Accueil</a></li>
@@ -22,13 +22,14 @@
         </ul>
       </nav>
     </header>
-    <br><br><br><br>
+
     <main>
-      <h1>Dévenez développeur web</h1>
-      <h2>Une formation gratuite et rémunérée pour les demandeurs d'emploi</h2>
-     
-        <a href="formationDWWM.html">Je découvre la formation</a>
-      
+      <section class="sectionindex">
+        <h1>Dévenez développeur web</h1>
+        <h2>Une formation gratuite et rémunérée pour les demandeurs d'emploi</h2>
+
+        <a class="bouton" href="formationDWWM.html">Je découvre la formation</a>
+      </section>
     </main>
   </body>
 </html>
