--- a/Exercice CSS/shoesplash/index.html
+++ b/Exercice CSS/shoesplash/index.html
@@ -78,19 +78,19 @@
       </section>
       <section id="news">
         <article id="new">
-          <h2>Nos nouveautés</h2>
+          <h2> <img src="./img/logo4.png" alt="">Nos nouveautés</h2>
           <img src="img/produit1.jpg" alt="" />
           <h3>Louboutin</h3>
           <small>Intemporel & Sexy</small>
         </article>
         <article id="best">
-          <h2>Nos best-sellers</h2>
+          <h2> <img src="./img/logo4.png" alt="">Nos best-sellers</h2>
           <img src="img/produit2.jpg" alt="" />
           <h3>Manolo Blahnik</h3>
           <small>Fashion & Distinction</small>
         </article>
         <article id="crush">
-          <h2>Notre coup de coeur</h2>
+          <h2> <img src="./img/logo4.png" alt="">Notre coup de coeur</h2>
           <img src="img/produit3.jpg" alt="" />
           <h3>Jimmy Choo</h3>
           <small>Elégance & Charme</small>
