modification ex_pochette + suite entrainement bootstrap

--- a/Exercice CSS/ex_pochette/pochette.html
+++ b/Exercice CSS/ex_pochette/pochette.html
@@ -31,16 +31,16 @@
         </section>
 
         <section id="right_side_header">
-            <button><i class="fa-solid fa-magnifying-glass"></i></button>
-            <input  type="text" name="search" placeholder="Recherche">
+            <button><i class="fa-solid fa-magnifying-glass"></i><input  type="text" name="search" placeholder="Recherche"></button>
+
         </section>
     </header>
 
     <article>
         <section id="left_side_article">
-            <a href="#" class="border_a">Music</a> 
-            <a href="#" class="border_a">Vidéos</a>
-            <a href="#" class="border_a_2">Podcast</a>
+            <a href="https://www.youtube.com/watch?v=eskl_eJhTS8" target="_blank" class="border_a">Music</a> 
+            <a href="https://www.youtube.com/watch?v=0_hE0cY55Vw" target="_blank" class="border_a">Vidéos</a>
+            <a href="https://www.youtube.com/watch?v=a3qFlJAv42c" target="_blank" class="border_a_2">Podcast</a>
         </section>
 
         <section id="right_side_article">
