--- a/BOOTSTRAP/Site bootstrap/essais bootstrap/index.html
+++ b/BOOTSTRAP/Site bootstrap/essais bootstrap/index.html
@@ -13,7 +13,11 @@
     <title>Essaie bootstrap</title>
   </head>
   <body class="bg-dark text-light">
+
+    <!-- HEADER -->
     <header>
+
+      <!-- Bouton défilement musique -->
       <div class="p-2">
         <div class="row text-center">
           <div class="col m-0 p-0 d-flex justify-content-around">
@@ -29,6 +33,8 @@
           </div>
         </div>
 
+        <!-- Bouton changement de volume  -->
+
         <div class="row text-center mt-5">
           <div class="col d-flex justify-content-around">
             <button class="btn btn-primary px-5">
@@ -41,6 +47,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Timeline, nom de l'artiste, titre -->
       <div class="p-2">
         <div class="row w-75">
           <div class="col text-center">
@@ -54,6 +62,8 @@
           </div>
         </div>
       </div>
+
+      <!-- Barre de recherche -->
 
       <div class="p-2">
         <div class="row">
@@ -73,7 +83,13 @@
       </div>
     </header>
 
+    <!--  ARTICLE -->
+
+
+
     <article class="d-flex flex-column d-sm-flex flex-sm-row mt-sm-3">
+
+      <!-- Partie de l'article contenant les trois bouton musique/vidéos/podcast -->
       <nav>
         <div class="text-center d-flex justify-content-center">
           <div class="col d-flex flex-column w-50 text-center w-sm-100">
@@ -93,6 +109,8 @@
           </div>
         </div>
       </nav>
+
+      <!-- Pochette d'album -->
 
       <div class="row mt-5 d-flex justify-content-center mt-sm-0 m-sm-0 p-sm-0">
         <div class="col-6 m-0 p-0 col-sm-6 text-center">
