--- a/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/index.html
+++ b/BOOTSTRAP/Site bootstrap/essais_bootstrap_2/index.html
@@ -1,29 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/2a53f181be.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
     <title>Bootstrap - Openclassroom</title>
 </head>
+
 <body>
 
-    <!-- MENU/HEADER -->
-    <header class="container-fluid bg-secondary sticky-sm-top">
-                <nav class="row d-flex flex-column d-sm-flex flex-sm-row">
-                    <div class="col-12 text-center col-sm-2 text-sm-start align-self-sm-center col-md-4 col-lg-4">
-                        <img class="" src="./img/logo-bastien.png" alt="">
+    <!-- MENU/HEADER  à suivre https://openclassrooms.com/fr/courses/7542506-creez-des-sites-web-responsives-avec-bootstrap-5/7546721-creez-de-la-navigation-responsive--> 
+    <header class="bg-secondary sticky-top">
+        <div class="container">
+            <div class="row">
+                <nav class="navbar navabr-expand navbar-dark d-flex flex-column">
+
+                    <div class="col-12">
+                        <a href="" class="navbar-brand text-uppercase fw-bold">
+                            <span class="bg-dark bg-gradient p-1 rounded-3 text-light">Bastien</span> <span
+                                class="text-light">Duliege</span>
+                        </a>
                     </div>
-                    <nav class="col-12 d-flex flex-column justify-content-between align-self-center col-sm-10 d-sm-flex flex-sm-row col-md-8 d-md-flex justify-content-md-around align-self-md-center col-lg-8">
-                        <a class="btn btn-secondary w-100" href="">Qui suis-je?</a>
-                        <a class="btn btn-secondary w-100" href="">Mon expertise</a>
-                        <a class="btn btn-secondary w-100" href="">portefolio</a>
-                        <a class="btn btn-secondary w-100" href="">contact</a>
-                    </nav>
-                </div>
+                    <div class="col-12">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a href="" class="nav-link px-5  btn btn-secondary">Qui suis-je?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link px-5  btn btn-secondary">Expertise</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="" class="nav-link px-5 btn btn-secondary">Portefolio</a>
+                            </li>
+                            <li class="nav-item5">
+                                <a href="" class="nav-link px-5  btn btn-secondary">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
+            </div>
+        </div>
+
     </header>
     <!-- Présentation -->
 
@@ -126,10 +148,13 @@
             </div>
         </div>
     </footer>
-    
 
 
-<!-- Bundle JS Bootstrap -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <!-- Bundle JS Bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
