--- a/BOOTSTRAP/Site bootstrap/Portfolio/index.html
+++ b/BOOTSTRAP/Site bootstrap/Portfolio/index.html
@@ -72,7 +72,7 @@
         </section>
 
 
-        <!-- Mes compétences -->
+        <!-- Mes compétences  REVOIR LE RESPONSIVE COMPETENCES-->
         <section class="bg-light">
             <section class="container my-5">
                 <h3 class=" fs-3 fs-md-2">Mon expertise dans le développement front end et back end</h3>
@@ -80,28 +80,28 @@
                     <div class="col-8 col-md-8 d-flex flex-column align-self-center">
                         <div class="row ">
                             <i class="fa-brands fa-html5 fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">HTML 5</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">HTML 5</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-css3-alt fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">CSS 3</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">CSS 3</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-bootstrap fs-2 col-1 align-self-center"></i>
-                            <h5 class=" col-2 align-self-center">Bootstrap</h5>
+                            <h5 class=" col-2 align-self-center d-none d-lg-block">Bootstrap</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-square-js fs-2 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">JavaScript</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">JavaScript</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
@@ -120,28 +120,28 @@
                     <div class="col-8 d-flex flex-column-reverse align-self-center offset col-md-8 my-md-0">
                         <div class="row ">
                             <i class="fa-brands fa-html5 fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">HTML 5</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">HTML 5</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-css3-alt fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">CSS 3</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">CSS 3</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-bootstrap fs-2 col-1 align-self-center"></i>
-                            <h5 class=" col-2 align-self-center">Bootstrap</h5>
+                            <h5 class=" col-2 align-self-center d-none d-lg-block">Bootstrap</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
                             <i class="fa-brands fa-square-js fs-2 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center">JavaScript</h5>
+                            <h5 class="col-2 align-self-center d-none d-lg-block">JavaScript</h5>
                             <div class="progress g-0 my-3 col-9">
                                 <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
