Responsive competence et ajout carrousselle portfolio

--- a/BOOTSTRAP/Site bootstrap/Portfolio/index.html
+++ b/BOOTSTRAP/Site bootstrap/Portfolio/index.html
@@ -14,7 +14,7 @@
 
 <body>
 
-    <!-- MENU/HEADER  à suivre https://openclassrooms.com/fr/courses/7542506-creez-des-sites-web-responsives-avec-bootstrap-5/7546721-creez-de-la-navigation-responsive-->
+    <!-- MENU/HEADER  à suivre -->
     <header class="bg-secondary sticky-top">
         <div class="container">
             <div class="row">
@@ -72,78 +72,80 @@
         </section>
 
 
-        <!-- Mes compétences  REVOIR LE RESPONSIVE COMPETENCES-->
+        <!-- Mes compétences -->
         <section class="bg-light">
             <section class="container my-5">
                 <h3 class=" fs-3 fs-md-2">Mon expertise dans le développement front end et back end</h3>
                 <div class="row d-flex d-md-flex flex-md-row h-100">
-                    <div class="col-8 col-md-8 d-flex flex-column align-self-center">
+                    <h5 class="font-weight-bold d-md-flex justify-content-md-center"><ins>Front-end :</ins></h5>
+                    <div class="col-12 col-md-8 d-flex flex-column align-self-center">
                         <div class="row ">
-                            <i class="fa-brands fa-html5 fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">HTML 5</h5>
-                            <div class="progress g-0 my-3 col-9">
+                            <i class="fa-brands fa-html5 fs-1 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="col-2 align-self-center d-none d-lg-block col-lg-2">HTML 5</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
                                 <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
-                            <i class="fa-brands fa-css3-alt fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">CSS 3</h5>
-                            <div class="progress g-0 my-3 col-9">
+                            <i class="fa-brands fa-css3-alt fs-1 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="col-2 align-self-center d-none d-lg-block col-lg-2">CSS 3</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
                                 <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
-                            <i class="fa-brands fa-bootstrap fs-2 col-1 align-self-center"></i>
-                            <h5 class=" col-2 align-self-center d-none d-lg-block">Bootstrap</h5>
-                            <div class="progress g-0 my-3 col-9">
+                            <i class="fa-brands fa-bootstrap fs-2 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class=" col-2 align-self-center d-none d-lg-block col-lg-2">Bootstrap</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
                                 <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
-                            <i class="fa-brands fa-square-js fs-2 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">JavaScript</h5>
-                            <div class="progress g-0 my-3 col-9">
+                            <i class="fa-brands fa-square-js fs-2 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="col-2 align-self-center d-none d-lg-block col-lg-2">JavaScript</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
                                 <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
                     </div>
                     <div class="col-4">
-                        <img class="w-100" src="./img/code-g1e70a6ec7_1280.jpg" alt="Image de code">
+                        <img class="d-flex d-none w-100 h-100 d-md-flex d-md-block" src="./img/code-g1e70a6ec7_1280.jpg" alt="Image de code">
                     </div>
                 </div>
-
+                <!-- Deuxième partie des compétences -->
                 <div class="row my-2 offset d-md-flex flex-md-row">
+                    <h5 class="font-weight-bold d-md-flex justify-content-md-center"><ins>Back-end :</ins></h5>
                     <div class="col">
-                        <img class="w-100" src="./img/programming-g80f570c21_1280.jpg" alt="Image de code">
+                        <img class="d-flex d-none w-100 h-100 d-md-flex d-md-block" src="./img/programming-g80f570c21_1280.jpg" alt="Image de code">
                     </div>
-                    <div class="col-8 d-flex flex-column-reverse align-self-center offset col-md-8 my-md-0">
+                    <div class="col-12 align-self-center offset col-md-8 my-md-0">
                         <div class="row ">
-                            <i class="fa-brands fa-html5 fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">HTML 5</h5>
-                            <div class="progress g-0 my-3 col-9">
-                                <div class="progress-bar" role="progressbar" style="width: 80%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <i class="fa-brands fa-php fs-1 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="align-self-center d-none d-lg-block col-lg-2">HTML 5</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
+                                <div class="progress-bar" role="progressbar" style="width: 20%;" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
-                            <i class="fa-brands fa-css3-alt fs-1 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">CSS 3</h5>
-                            <div class="progress g-0 my-3 col-9">
-                                <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            <i class="fa-solid fa-arrow-rotate-right fs-2 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="align-self-center d-none d-lg-block col-lg-2 col-lg-2">In training</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
+                                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
                         <div class="row ">
-                            <i class="fa-brands fa-bootstrap fs-2 col-1 align-self-center"></i>
-                            <h5 class=" col-2 align-self-center d-none d-lg-block">Bootstrap</h5>
-                            <div class="progress g-0 my-3 col-9">
-                                <div class="progress-bar" role="progressbar" style="width: 40%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                            <i class="fa-solid fa-arrow-rotate-right fs-2 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class=" col-2 align-self-center d-none d-lg-block col-lg-2">In training</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
+                                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
-                        <div class="row ">
-                            <i class="fa-brands fa-square-js fs-2 col-1 align-self-center"></i>
-                            <h5 class="col-2 align-self-center d-none d-lg-block">JavaScript</h5>
-                            <div class="progress g-0 my-3 col-9">
-                                <div class="progress-bar" role="progressbar" style="width: 10%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                        <div class="row">
+                            <i class="fa-solid fa-arrow-rotate-right fs-2 col-2 align-self-center col-md-2 col-lg-1"></i>
+                            <h5 class="col-2 align-self-center d-none d-lg-block col-lg-2">In learning</h5>
+                            <div class="progress g-0 my-3 col-9 col-md-10 col-lg-9">
+                                <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
 
@@ -152,26 +154,59 @@
             </section>
         </section>
 
-        <!-- Portfolio/projet -->
+        <!-- Portfolio/projet Ajouter du contenu au carroussel -->
 
         <section class="container my-4">
             <h3 class=" fs-3 fs-md-2">Mon portfolio</h3>
             <h5>Projet perso et pro</h5>
-            <div class="row">
-                <div class="col bg-secondary">
-                    <h1>[Inserez projet]</h1>
-                </div>
-                <div class="col bg-secondary">
-                    <h1>[Inserez projet]</h1>
-                </div>
-                <div class="col bg-secondary">
-                    <h1>[Inserez projet]</h1>
-                </div>
-                <div class="col bg-secondary">
-                    <h1>[Inserez projet]</h1>
-                </div>
 
-            </div>
+            <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <div class="container">
+                      <div class="carousel-caption text-start">
+                        <h1>Example headline.</h1>
+                        <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <div class="container">
+                      <div class="carousel-caption">
+                        <h1>Another example headline.</h1>
+                        <p>Some representative placeholder content for the second slide of the carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <div class="container">
+                      <div class="carousel-caption text-end">
+                        <h1>One more for good measure.</h1>
+                        <p>Some representative placeholder content for the third slide of this carousel.</p>
+                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+              </div>
         </section>
 
         <!-- Contact -->
