--- a/BOOTSTRAP/Site bootstrap/Portfolio/index.html
+++ b/BOOTSTRAP/Site bootstrap/Portfolio/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="./styles/style.css">
-    <title>Bootstrap - Openclassroom</title>
+    <title>Portfolio | Bastien Duliege</title>
 </head>
 
 <body>
@@ -159,8 +159,8 @@
         <section id="portfolio" class="container my-4">
             <h3 class=" fs-3 fs-md-2">Mon portfolio</h3>
             <h5>Projet perso et pro</h5>
-
-            <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+        
+            <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -168,17 +168,17 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="./img/bastienportfolio.png" width="100%" height="100%" alt="">
-                    <div class="container">
-                      <div class="carousel-caption text-start">
-                        <h1>Example headline.</h1>
-                        <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+                    <img src="./img/ChocoBoom.png" width="100%" alt="Image d'un site web">
+                    <div class="container-fluid">
+                      <div class="carousel-caption">
+                        <h1>Choco Boom !</h1>
+                        <p class="opacity-75">Mon premier site internet en responsive, fait en HTML et en CSS</p>
+                        <p><a class="btn btn-lg btn-primary" href="https://bastiend.000webhostapp.com/chocolatBoom2021/index.html">Allez le visiter</a></p>
                       </div>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <img src="./img/Transition1.png" width="100%" alt="Image d'un site web">
                     <div class="container">
                       <div class="carousel-caption">
                         <h1>Another example headline.</h1>
@@ -188,7 +188,7 @@
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="var(--bs-secondary-color)"/></svg>
+                    <img src="./img/Transition2.png" width="100%" alt="Image d'un site web">
                     <div class="container">
                       <div class="carousel-caption text-end">
                         <h1>One more for good measure.</h1>
@@ -198,6 +198,8 @@
                     </div>
                   </div>
                 </div>
+        
+                <!-- MODIFIER LA COULEUR DU BOUTTON PAR ICI OU JE SAIS PAS MAIS PAR ICI -->
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
@@ -248,9 +250,9 @@
 
 
     <!-- Bundle JS Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
 </body>
 
 </html>
